assignments/styles.css
html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  border: 0;
  padding: 0;
  font-family: "Open Sans", sans-serif;
}

.row {
  width: 1000px;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

/* HEADER */

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, .8);
}

nav {
  height: 50px;
}

nav > ul {
  position: relative;
  list-style-type: none;
  margin: 0;
  height: 100%;
  text-align: right;
}
nav > ul li {
  display: inline-block;
  height: 50px;
}
nav > ul li:first-child {
  position: absolute;
  left: 0;
  top: 0;
}
nav > ul li > a {
  box-sizing: border-box;
  display: block;
  padding: 5px 2rem;
  height: 100%;
  line-height: 40px;
  color: white;
  text-decoration: none;
  transition: background-color .2s linear, color .2s linear;
}
nav > ul li > a:hover {
  background-color: white;
  color: black;
}

#logo {
  font-weight: bold;
}

/* MAIN */

#pf-container {
  width: 100vw;
  height: 100vh;
  text-align: center;
  background-image: url('assets/img/background.jpg');
  background-size: cover;
  background-position: center center;
}

#pf {
  position: relative;
  top: calc(50% - 110px);
  transition: transform .9s;
}

#pf:hover {
  transform: rotate(180deg);
}

#catch {
  background-color: #000;
  padding: 4rem 0;
  color: #fff;
  text-align: center;
}

#catch #catch-head {
  text-align: left;
}
#catch #catch-head h1 {
  float: left;
}
#catch #catch-head p {
  float: right;
  margin-top: 2rem;
  margin-right: 4rem;
}
#catch #catch-head hr {
  clear: both;
}

#catch .catch-column {
  box-sizing: border-box;
  padding: 4rem 3rem;
  display: inline-block;
  width: 33%;
  min-width: 300px;
  font-size: 1.5rem;
  vertical-align: text-top;
}
#catch .catch-column i {
  margin-bottom: 1rem;
  font-size: 5rem;
}

